--- a/ngcs/index.html
+++ b/ngcs/index.html
@@ -19,9 +19,6 @@
 
         <!-- Puzzel customize buttons and header-->
         <style>
-
-        /*   .intelecomchatstarter {border: 4px solid #86F200; width: 60px; height: 60px; background: #000; background-image: url("assets/img/robot_avatar.png")}*/
-
           .intelecomchat__button {background:#000;}
           @media (max-width: 500px) {
           .intelecomchatdialog {
@@ -31,8 +28,7 @@
           }
           .intelecomStarterRight {right: 20px;}
           .intelecomStarterBottom {bottom: 20px;}
-          .intelecomchat_infostatelamp_connected {background: #86F200;}
-          .intelecomchat_infostatelamp_queue {background: #FDD300;)
+          .intelecomchat_infostatelamp_queue {background: #FDD300;)}
           .intelecomoption {max-width: 80%;}
 
         </style>
