--- a/ngcs/index.html
+++ b/ngcs/index.html
@@ -9,31 +9,39 @@
         <title>Digital Workforce - Bootstrap Your Customer experiencee</title>
 
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+
         <!-- Puzzel style -->
         <link rel="stylesheet" title="IntelecomChatCustomCss" href="css/puzzel.css" type="text/css" />
-                <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/fontawesome.min.css" integrity="sha512-8jdwayz5n8F2cnW26l9vpV6+yGOcRAqz6HTu+DQ3FtVIAts2gTdlFZOGpYhvBMXkWEgxPN3Y22UWyZXuDowNLA==" crossorigin="anonymous" /> -->
-                <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"> -->
-                <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-
-
-
         <!-- Puzzel customize buttons and header-->
         <style>
           .intelecomchat__button {background:#000;}
-          @media (max-width: 500px) {
-          .intelecomchatdialog {
-            width: 98% !important;
-            margin: 10px 1% 0px 1% !important;
-          }
-          }
           .intelecomStarterRight {right: 20px;}
           .intelecomStarterBottom {bottom: 20px;}
-          .intelecomchat_infostatelamp_queue {background: #FDD300;)}
           .intelecomoption {max-width: 80%;}
-
         </style>
+        <!-- Teneo Web Chat start -->
+        <div id="teneo-web-chat"></div>
+        <script src="js/teneo-web-chat.js"></script>
+        <script>
+          window.onload = function () {
+            if (
+              window.TeneoWebChat &&
+                typeof window.TeneoWebChat.initialize === 'function'
+            ) {
+              var element = document.getElementById('teneo-web-chat');
+              const teneoProps = {
+                'teneoEngineUrl': 'https://some.teneo/engine-instance/',
+              }
+              window.TeneoWebChat.initialize(element,teneoProps);
+            }
+          }
+        </script>
+        <!-- Teneo Web Chat end -->
+
+
         <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
@@ -92,7 +100,15 @@
                           This demo will show the real power of understanding the customer journey and how technologies can emphasize the experience.
                               <p><button class="chatstarter btn btn-primary mx-auto" classname="startChat">Try now</button></p>
                               <p><button type="button" onclick="javascript:openChat()">Open chat</button></p>
-
+                              <form action="https://api.puzzel.com/contactcentre/cow.aspx" method="post">
+                              <input type="hidden" name="customerKey" value="900137"/>
+                              <input type="hidden" name="accessPoint" value="108108499"/>
+                              <input type="hidden" name="countryCode" value="SE"/>
+                              <input type="text" name="callbackNumber"/>
+                              <input type="hidden" name="queueKey" value="q_queue3"/>
+                              <form action="https://api.puzzel.com/contactcentre/cow.aspx" method="post">
+<input type="submit" value="Call Me"/>
+</form>
                         </p>
                     </div>
                 </div>
