--- a/ngcs/index.html
+++ b/ngcs/index.html
@@ -31,7 +31,7 @@
             ) {
               var element = document.getElementById('teneo-web-chat');
               const teneoProps = {
-                'teneoEngineUrl': 'https://some.teneo/engine-instance/',
+                'teneoEngineUrl': 'https://ecstaticstorks-1ad44d.bots.teneo.ai/tesolution_69k5ddxsy48kjabyxrfek9g9ww/',
               }
               window.TeneoWebChat.initialize(element,teneoProps);
             }
