--- a/ica/index.html
+++ b/ica/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0 user-scalable=no">
     <style>
       body {
-        background: #E5F5FE;
+        background: #FCECE7;
       }
     </style>
   </head>
 
   <body>
     <button onclick="TeneoWebChat.call('reset')">Reset Chat</button><br>
-    
+
     <script src="teneo-web-chat.js"></script> <!-- needed for Heroku -->
     <div id="teneo-web-chat"></div>
     <script>
@@ -44,4 +44,3 @@
     </script>
   <script src="main.js"></script></body>
 </html>
-
