--- a/ica/index.html
+++ b/ica/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <title>Teneo Web Chat</title>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0 user-scalable=no">
+    <link rel="SHORTCUT ICON" href="https://assets.icanet.se/EPI-assets/favicon.ico" />
     <style>
       body {
         background: #FCECE7;
@@ -42,5 +43,4 @@
         }
       }
     </script>
-  <script src="main.js"></script></body>
 </html>
