--- a/ica/index.html
+++ b/ica/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Teneo Web Chat</title>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0 user-scalable=no">
-    <link rel="SHORTCUT ICON" href="https://assets.icanet.se/EPI-assets/favicon.ico" />
+    <link rel="SHORTCUT ICON" href="favicon.ico" />
     <style>
       body {
         background: #FCECE7;
