fix fitter text

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body {
         <div data-fitter-happier-text>sandstream</div>
         <div data-fitter-happier-text>săndstrēm</div>
         <div data-fitter-happier-text>sandstre.am</div>
+        <div data-fitter-happier-text class="">Eating well</div>
       </section>
 
         <script src="dist/fitter-happier-text.js"></script>
