Fix paths for Vercel deployment

--- a/djr/index.html
+++ b/djr/index.html
@@ -9,22 +9,22 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;500;600&family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/djr/assets/css/main.css">
+  <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 <body class="home">
 
   <nav class="nav">
     <div class="nav-container">
-      <a href="/djr/" class="nav-logo">DIESEL JOHNNY RAINES</a>
+      <a href="/" class="nav-logo">DIESEL JOHNNY RAINES</a>
       <button class="nav-toggle" aria-label="Toggle menu">
         <span></span><span></span><span></span>
       </button>
       <ul class="nav-menu">
-        <li><a href="/djr/" class="active">Home</a></li>
-        <li><a href="/djr/music.html">Music</a></li>
-        <li><a href="/djr/story.html">Story</a></li>
-        <li><a href="/djr/gallery.html">Gallery</a></li>
-        <li><a href="/djr/about.html">About</a></li>
+        <li><a href="/" class="active">Home</a></li>
+        <li><a href="/music.html">Music</a></li>
+        <li><a href="/story.html">Story</a></li>
+        <li><a href="/gallery.html">Gallery</a></li>
+        <li><a href="/about.html">About</a></li>
       </ul>
     </div>
   </nav>
@@ -37,7 +37,7 @@
         <p class="hero-quote">"Same man. Same voice. Three completely different burns."</p>
         <div class="hero-buttons">
           <a href="https://open.spotify.com/artist/dieseljohnnyraines" class="btn btn-primary" target="_blank">Listen Now</a>
-          <a href="/djr/story.html" class="btn btn-secondary">Discover the Story</a>
+          <a href="/story.html" class="btn btn-secondary">Discover the Story</a>
         </div>
       </div>
     </section>
@@ -64,37 +64,37 @@
         <div class="albums-grid">
           <article class="album-card" data-album="1">
             <div class="album-card-image">
-              <img src="/djr/assets/images/album-1-heavy-fuel.png" alt="Heavy Fuel album cover">
+              <img src="/assets/images/album-1-heavy-fuel.png" alt="Heavy Fuel album cover">
             </div>
             <div class="album-card-content">
               <span class="album-card-era">The Power Era</span>
               <h3>HEAVY FUEL</h3>
               <p>Before the fall. Maximum power. The warning he didn't hear.</p>
-              <a href="/djr/music.html#heavy-fuel" class="btn btn-primary">Listen</a>
+              <a href="/music.html#heavy-fuel" class="btn btn-primary">Listen</a>
             </div>
           </article>
 
           <article class="album-card" data-album="2">
             <div class="album-card-image">
-              <img src="/djr/assets/images/album-2-shattered.png" alt="Shattered album cover">
+              <img src="/assets/images/album-2-shattered.png" alt="Shattered album cover">
             </div>
             <div class="album-card-content">
               <span class="album-card-era">The Loss Era</span>
               <h3>SHATTERED</h3>
               <p>Two years of hospital corridors. The breaking point.</p>
-              <a href="/djr/music.html#shattered" class="btn btn-primary">Coming Soon</a>
+              <a href="/music.html#shattered" class="btn btn-primary">Coming Soon</a>
             </div>
           </article>
 
           <article class="album-card" data-album="3">
             <div class="album-card-image">
-              <img src="/djr/assets/images/album-3-built-back-different.png" alt="Built Back Different album cover">
+              <img src="/assets/images/album-3-built-back-different.png" alt="Built Back Different album cover">
             </div>
             <div class="album-card-content">
               <span class="album-card-era">The Wisdom Era</span>
               <h3>BUILT BACK DIFFERENT</h3>
               <p>One year after. Single dad. Rebuilt for Emma and Jake.</p>
-              <a href="/djr/music.html#built-back-different" class="btn btn-primary">Coming Soon</a>
+              <a href="/music.html#built-back-different" class="btn btn-primary">Coming Soon</a>
             </div>
           </article>
         </div>
@@ -107,7 +107,7 @@
           "Diesel is not real. But maybe that's the point &mdash; what moves us doesn't need to be true to be authentic."
         </blockquote>
         <p class="text-center text-muted">
-          <a href="/djr/about.html">Learn about this AI art project &rarr;</a>
+          <a href="/about.html">Learn about this AI art project &rarr;</a>
         </p>
       </div>
     </section>
@@ -120,11 +120,11 @@
         <a href="https://music.apple.com/artist/diesel-johnny-raines" target="_blank">Apple Music</a>
         <a href="https://www.youtube.com/@dieseljohnnyraines" target="_blank">YouTube</a>
       </div>
-      <p class="footer-note">Diesel Johnny Raines is an AI art project. <a href="/djr/about.html">Learn more</a></p>
+      <p class="footer-note">Diesel Johnny Raines is an AI art project. <a href="/about.html">Learn more</a></p>
       <p class="footer-copyright">&copy; 2025 Sandstream Records</p>
     </div>
   </footer>
 
-  <script src="/djr/assets/js/main.js"></script>
+  <script src="/assets/js/main.js"></script>
 </body>
 </html>
