--- a/djr/music.html
+++ b/djr/music.html
@@ -8,22 +8,22 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;500;600&family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/djr/assets/css/main.css">
+  <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 <body class="music">
 
   <nav class="nav">
     <div class="nav-container">
-      <a href="/djr/" class="nav-logo">DIESEL JOHNNY RAINES</a>
+      <a href="/" class="nav-logo">DIESEL JOHNNY RAINES</a>
       <button class="nav-toggle" aria-label="Toggle menu">
         <span></span><span></span><span></span>
       </button>
       <ul class="nav-menu">
-        <li><a href="/djr/">Home</a></li>
-        <li><a href="/djr/music.html" class="active">Music</a></li>
-        <li><a href="/djr/story.html">Story</a></li>
-        <li><a href="/djr/gallery.html">Gallery</a></li>
-        <li><a href="/djr/about.html">About</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/music.html" class="active">Music</a></li>
+        <li><a href="/story.html">Story</a></li>
+        <li><a href="/gallery.html">Gallery</a></li>
+        <li><a href="/about.html">About</a></li>
       </ul>
     </div>
   </nav>
@@ -43,7 +43,7 @@
         <div class="album-detail" id="heavy-fuel">
           <div class="albums-grid" style="grid-template-columns: 300px 1fr; align-items: start;">
             <div class="album-card-image">
-              <img src="/djr/assets/images/album-1-heavy-fuel.png" alt="Heavy Fuel">
+              <img src="/assets/images/album-1-heavy-fuel.png" alt="Heavy Fuel">
             </div>
             <div class="album-info">
               <span class="album-card-era" style="color: var(--color-album1);">The Power Era</span>
@@ -78,7 +78,7 @@
         <div class="album-detail" id="shattered">
           <div class="albums-grid" style="grid-template-columns: 300px 1fr; align-items: start;">
             <div class="album-card-image" style="opacity: 0.7;">
-              <img src="/djr/assets/images/album-2-shattered.png" alt="Shattered">
+              <img src="/assets/images/album-2-shattered.png" alt="Shattered">
             </div>
             <div class="album-info">
               <span class="album-card-era" style="color: var(--color-album2);">The Loss Era</span>
@@ -98,7 +98,7 @@
         <div class="album-detail" id="built-back-different">
           <div class="albums-grid" style="grid-template-columns: 300px 1fr; align-items: start;">
             <div class="album-card-image" style="opacity: 0.7;">
-              <img src="/djr/assets/images/album-3-built-back-different.png" alt="Built Back Different">
+              <img src="/assets/images/album-3-built-back-different.png" alt="Built Back Different">
             </div>
             <div class="album-info">
               <span class="album-card-era" style="color: var(--color-album3);">The Wisdom Era</span>
@@ -123,11 +123,11 @@
         <a href="https://music.apple.com/artist/diesel-johnny-raines" target="_blank">Apple Music</a>
         <a href="https://www.youtube.com/@dieseljohnnyraines" target="_blank">YouTube</a>
       </div>
-      <p class="footer-note">Diesel Johnny Raines is an AI art project. <a href="/djr/about.html">Learn more</a></p>
+      <p class="footer-note">Diesel Johnny Raines is an AI art project. <a href="/about.html">Learn more</a></p>
       <p class="footer-copyright">&copy; 2025 Sandstream Records</p>
     </div>
   </footer>
 
-  <script src="/djr/assets/js/main.js"></script>
+  <script src="/assets/js/main.js"></script>
 </body>
 </html>
