--- a/djr/gallery.html
+++ b/djr/gallery.html
@@ -8,22 +8,22 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;500;600&family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/djr/assets/css/main.css">
+  <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 <body class="gallery">
 
   <nav class="nav">
     <div class="nav-container">
-      <a href="/djr/" class="nav-logo">DIESEL JOHNNY RAINES</a>
+      <a href="/" class="nav-logo">DIESEL JOHNNY RAINES</a>
       <button class="nav-toggle" aria-label="Toggle menu">
         <span></span><span></span><span></span>
       </button>
       <ul class="nav-menu">
-        <li><a href="/djr/">Home</a></li>
-        <li><a href="/djr/music.html">Music</a></li>
-        <li><a href="/djr/story.html">Story</a></li>
-        <li><a href="/djr/gallery.html" class="active">Gallery</a></li>
-        <li><a href="/djr/about.html">About</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/music.html">Music</a></li>
+        <li><a href="/story.html">Story</a></li>
+        <li><a href="/gallery.html" class="active">Gallery</a></li>
+        <li><a href="/about.html">About</a></li>
       </ul>
     </div>
   </nav>
@@ -40,28 +40,28 @@
       <div class="container">
         <div class="gallery-grid">
           <div class="gallery-item">
-            <img src="/djr/assets/images/gallery/diesel-garage.png" alt="In the garage">
+            <img src="/assets/images/gallery/diesel-garage.png" alt="In the garage">
           </div>
           <div class="gallery-item">
-            <img src="/djr/assets/images/gallery/diesel-emotional.png" alt="Quiet moment">
+            <img src="/assets/images/gallery/diesel-emotional.png" alt="Quiet moment">
           </div>
           <div class="gallery-item">
-            <img src="/djr/assets/images/gallery/diesel-kids.png" alt="With Emma and Jake">
+            <img src="/assets/images/gallery/diesel-kids.png" alt="With Emma and Jake">
           </div>
           <div class="gallery-item">
-            <img src="/djr/assets/images/gallery/diesel-backstage.png" alt="Backstage">
+            <img src="/assets/images/gallery/diesel-backstage.png" alt="Backstage">
           </div>
           <div class="gallery-item">
-            <img src="/djr/assets/images/gallery/diesel-summer.png" alt="Summer BBQ">
+            <img src="/assets/images/gallery/diesel-summer.png" alt="Summer BBQ">
           </div>
           <div class="gallery-item">
-            <img src="/djr/assets/images/gallery/diesel-winter.png" alt="Winter">
+            <img src="/assets/images/gallery/diesel-winter.png" alt="Winter">
           </div>
         </div>
 
         <p class="text-center text-muted mt-lg">
           All images generated with AI as part of this art project.<br>
-          <a href="/djr/about.html">Learn more about how this was made</a>
+          <a href="/about.html">Learn more about how this was made</a>
         </p>
       </div>
     </section>
@@ -74,11 +74,11 @@
         <a href="https://music.apple.com/artist/diesel-johnny-raines" target="_blank">Apple Music</a>
         <a href="https://www.youtube.com/@dieseljohnnyraines" target="_blank">YouTube</a>
       </div>
-      <p class="footer-note">Diesel Johnny Raines is an AI art project. <a href="/djr/about.html">Learn more</a></p>
+      <p class="footer-note">Diesel Johnny Raines is an AI art project. <a href="/about.html">Learn more</a></p>
       <p class="footer-copyright">&copy; 2025 Sandstream Records</p>
     </div>
   </footer>
 
-  <script src="/djr/assets/js/main.js"></script>
+  <script src="/assets/js/main.js"></script>
 </body>
 </html>
