--- a/djr/story.html
+++ b/djr/story.html
@@ -8,22 +8,22 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;500;600&family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/djr/assets/css/main.css">
+  <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 <body class="story">
 
   <nav class="nav">
     <div class="nav-container">
-      <a href="/djr/" class="nav-logo">DIESEL JOHNNY RAINES</a>
+      <a href="/" class="nav-logo">DIESEL JOHNNY RAINES</a>
       <button class="nav-toggle" aria-label="Toggle menu">
         <span></span><span></span><span></span>
       </button>
       <ul class="nav-menu">
-        <li><a href="/djr/">Home</a></li>
-        <li><a href="/djr/music.html">Music</a></li>
-        <li><a href="/djr/story.html" class="active">Story</a></li>
-        <li><a href="/djr/gallery.html">Gallery</a></li>
-        <li><a href="/djr/about.html">About</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/music.html">Music</a></li>
+        <li><a href="/story.html" class="active">Story</a></li>
+        <li><a href="/gallery.html">Gallery</a></li>
+        <li><a href="/about.html">About</a></li>
       </ul>
     </div>
   </nav>
@@ -124,7 +124,7 @@
         <blockquote class="highlight-quote">
           "Same man. Same voice. Three completely different burns."
         </blockquote>
-        <a href="/djr/music.html" class="btn btn-primary mt-lg">Listen to the Trilogy</a>
+        <a href="/music.html" class="btn btn-primary mt-lg">Listen to the Trilogy</a>
       </div>
     </section>
   </main>
@@ -136,11 +136,11 @@
         <a href="https://music.apple.com/artist/diesel-johnny-raines" target="_blank">Apple Music</a>
         <a href="https://www.youtube.com/@dieseljohnnyraines" target="_blank">YouTube</a>
       </div>
-      <p class="footer-note">Diesel Johnny Raines is an AI art project. <a href="/djr/about.html">Learn more</a></p>
+      <p class="footer-note">Diesel Johnny Raines is an AI art project. <a href="/about.html">Learn more</a></p>
       <p class="footer-copyright">&copy; 2025 Sandstream Records</p>
     </div>
   </footer>
 
-  <script src="/djr/assets/js/main.js"></script>
+  <script src="/assets/js/main.js"></script>
 </body>
 </html>
