--- a/djr/gallery.html
+++ b/djr/gallery.html
@@ -43,19 +43,28 @@
             <img src="/assets/images/gallery/diesel-garage.png" alt="In the garage">
           </div>
           <div class="gallery-item">
-            <img src="/assets/images/gallery/diesel-emotional.png" alt="Quiet moment">
-          </div>
-          <div class="gallery-item">
             <img src="/assets/images/gallery/diesel-kids.png" alt="With Emma and Jake">
           </div>
           <div class="gallery-item">
-            <img src="/assets/images/gallery/diesel-backstage.png" alt="Backstage">
+            <img src="/assets/images/gallery/disel-beth.png" alt="With Beth">
           </div>
           <div class="gallery-item">
             <img src="/assets/images/gallery/diesel-summer.png" alt="Summer BBQ">
           </div>
           <div class="gallery-item">
             <img src="/assets/images/gallery/diesel-winter.png" alt="Winter">
+          </div>
+          <div class="gallery-item">
+            <img src="/assets/images/gallery/diesel-backstage.png" alt="Backstage">
+          </div>
+          <div class="gallery-item">
+            <img src="/assets/images/gallery/diesel-before-stage.png" alt="Before the show">
+          </div>
+          <div class="gallery-item">
+            <img src="/assets/images/gallery/diesel-stage.png" alt="On stage">
+          </div>
+          <div class="gallery-item">
+            <img src="/assets/images/gallery/diesel-emotional.png" alt="Quiet moment">
           </div>
         </div>
 
