Add Coming Soon buttons, fix responsive, update about page

--- a/djr/about.html
+++ b/djr/about.html
@@ -14,12 +14,12 @@
 
   <nav class="nav">
     <div class="nav-container">
-      <a href="/" class="nav-logo">DIESEL JOHNNY RAINES</a>
+      <a href="/index.html" class="nav-logo">DIESEL JOHNNY RAINES</a>
       <button class="nav-toggle" aria-label="Toggle menu">
         <span></span><span></span><span></span>
       </button>
       <ul class="nav-menu">
-        <li><a href="/">Home</a></li>
+        <li><a href="/index.html">Home</a></li>
         <li><a href="/music.html">Music</a></li>
         <li><a href="/story.html">Story</a></li>
         <li><a href="/gallery.html">Gallery</a></li>
@@ -60,7 +60,7 @@
               <span class="icon">&#128221;</span>
               <div>
                 <strong>Story & Lyrics</strong><br>
-                <span class="text-muted">Developed with Claude (Anthropic). Characters, family history, album arc &mdash; built like a screenplay for a fictional trilogy.</span>
+                <span class="text-muted">Developed with Claude Code and the BMAD Method. Characters, family history, album arc &mdash; built like a screenplay for a fictional trilogy.</span>
               </div>
             </li>
             <li>
@@ -74,14 +74,14 @@
               <span class="icon">&#128247;</span>
               <div>
                 <strong>Images</strong><br>
-                <span class="text-muted">Generated with Google Gemini & Sora. Designed to feel like real family photos and candid shots, not polished press photos.</span>
+                <span class="text-muted">Generated with Sora. Designed to feel like real family photos and candid shots, not polished press photos.</span>
               </div>
             </li>
             <li>
               <span class="icon">&#127912;</span>
               <div>
-                <strong>Vision</strong><br>
-                <span class="text-muted">Everything connects. Three albums telling one cohesive story about power, loss, and rebuilding as a single dad.</span>
+                <strong>Production & Distribution</strong><br>
+                <span class="text-muted">Audio processed with ffmpeg. Distributed via DistroKid. Website built with Jekyll and hosted on Vercel.</span>
               </div>
             </li>
           </ul>
@@ -102,13 +102,13 @@
         <div class="about-section">
           <h2>TOOLS USED</h2>
           <p class="text-muted">
-            Claude (Anthropic) &bull; Suno AI &bull; Google Gemini &bull; Sora &bull; GitHub Pages
+            Claude Code &bull; BMAD Method &bull; Suno AI &bull; Sora &bull; ffmpeg &bull; DistroKid &bull; Jekyll &bull; Vercel
           </p>
         </div>
 
         <div class="about-section">
           <h2>CREATED BY</h2>
-          <p>Peter Sandstrom</p>
+          <p>Peter Sandström</p>
           <p class="text-muted">Questions about the project? Want to discuss AI and art?</p>
           <p><a href="mailto:hello@sandstre.am">Get in touch</a></p>
         </div>
@@ -123,11 +123,6 @@
 
   <footer class="footer">
     <div class="footer-container">
-      <div class="footer-links">
-        <a href="https://open.spotify.com/artist/dieseljohnnyraines" target="_blank">Spotify</a>
-        <a href="https://music.apple.com/artist/diesel-johnny-raines" target="_blank">Apple Music</a>
-        <a href="https://www.youtube.com/@dieseljohnnyraines" target="_blank">YouTube</a>
-      </div>
       <p class="footer-note">Diesel Johnny Raines is an AI art project. <a href="/about.html">Learn more</a></p>
       <p class="footer-copyright">&copy; 2025 Sandstream Records</p>
     </div>
