--- a/djr/gallery.html
+++ b/djr/gallery.html
@@ -14,12 +14,12 @@
 
   <nav class="nav">
     <div class="nav-container">
-      <a href="/" class="nav-logo">DIESEL JOHNNY RAINES</a>
+      <a href="/index.html" class="nav-logo">DIESEL JOHNNY RAINES</a>
       <button class="nav-toggle" aria-label="Toggle menu">
         <span></span><span></span><span></span>
       </button>
       <ul class="nav-menu">
-        <li><a href="/">Home</a></li>
+        <li><a href="/index.html">Home</a></li>
         <li><a href="/music.html">Music</a></li>
         <li><a href="/story.html">Story</a></li>
         <li><a href="/gallery.html" class="active">Gallery</a></li>
@@ -78,11 +78,6 @@
 
   <footer class="footer">
     <div class="footer-container">
-      <div class="footer-links">
-        <a href="https://open.spotify.com/artist/dieseljohnnyraines" target="_blank">Spotify</a>
-        <a href="https://music.apple.com/artist/diesel-johnny-raines" target="_blank">Apple Music</a>
-        <a href="https://www.youtube.com/@dieseljohnnyraines" target="_blank">YouTube</a>
-      </div>
       <p class="footer-note">Diesel Johnny Raines is an AI art project. <a href="/about.html">Learn more</a></p>
       <p class="footer-copyright">&copy; 2025 Sandstream Records</p>
     </div>
