--- a/djr/index.html
+++ b/djr/index.html
@@ -15,12 +15,12 @@
 
   <nav class="nav">
     <div class="nav-container">
-      <a href="/" class="nav-logo">DIESEL JOHNNY RAINES</a>
+      <a href="/index.html" class="nav-logo">DIESEL JOHNNY RAINES</a>
       <button class="nav-toggle" aria-label="Toggle menu">
         <span></span><span></span><span></span>
       </button>
       <ul class="nav-menu">
-        <li><a href="/" class="active">Home</a></li>
+        <li><a href="/index.html" class="active">Home</a></li>
         <li><a href="/music.html">Music</a></li>
         <li><a href="/story.html">Story</a></li>
         <li><a href="/gallery.html">Gallery</a></li>
@@ -36,7 +36,7 @@
         <h1 class="hero-title">"DIESEL" JOHNNY RAINES</h1>
         <p class="hero-quote">"Same man. Same voice. Three completely different burns."</p>
         <div class="hero-buttons">
-          <a href="https://open.spotify.com/artist/dieseljohnnyraines" class="btn btn-primary" target="_blank">Listen Now</a>
+          <span class="btn btn-primary" style="opacity: 0.6; cursor: default;">Coming Soon</span>
           <a href="/story.html" class="btn btn-secondary">Discover the Story</a>
         </div>
       </div>
@@ -70,7 +70,7 @@
               <span class="album-card-era">The Power Era</span>
               <h3>HEAVY FUEL</h3>
               <p>Before the fall. Maximum power. The warning he didn't hear.</p>
-              <a href="/music.html#heavy-fuel" class="btn btn-primary">Listen</a>
+              <span class="btn btn-primary" style="opacity: 0.6; cursor: default;">Coming Soon</span>
             </div>
           </article>
 
@@ -115,11 +115,6 @@
 
   <footer class="footer">
     <div class="footer-container">
-      <div class="footer-links">
-        <a href="https://open.spotify.com/artist/dieseljohnnyraines" target="_blank">Spotify</a>
-        <a href="https://music.apple.com/artist/diesel-johnny-raines" target="_blank">Apple Music</a>
-        <a href="https://www.youtube.com/@dieseljohnnyraines" target="_blank">YouTube</a>
-      </div>
       <p class="footer-note">Diesel Johnny Raines is an AI art project. <a href="/about.html">Learn more</a></p>
       <p class="footer-copyright">&copy; 2025 Sandstream Records</p>
     </div>
