--- a/djr/music.html
+++ b/djr/music.html
@@ -14,12 +14,12 @@
 
   <nav class="nav">
     <div class="nav-container">
-      <a href="/" class="nav-logo">DIESEL JOHNNY RAINES</a>
+      <a href="/index.html" class="nav-logo">DIESEL JOHNNY RAINES</a>
       <button class="nav-toggle" aria-label="Toggle menu">
         <span></span><span></span><span></span>
       </button>
       <ul class="nav-menu">
-        <li><a href="/">Home</a></li>
+        <li><a href="/index.html">Home</a></li>
         <li><a href="/music.html" class="active">Music</a></li>
         <li><a href="/story.html">Story</a></li>
         <li><a href="/gallery.html">Gallery</a></li>
@@ -52,8 +52,7 @@
               <p>Diesel at his peak. Working too hard, missing family dinners. Beth begs him to slow down. He doesn't listen.</p>
 
               <div class="mt-lg">
-                <a href="https://open.spotify.com/artist/dieseljohnnyraines" class="btn btn-primary" target="_blank">Spotify</a>
-                <a href="https://music.apple.com/artist/diesel-johnny-raines" class="btn btn-secondary" target="_blank">Apple Music</a>
+                <span class="btn btn-primary" style="opacity: 0.6; cursor: default;">Coming Soon</span>
               </div>
 
               <ol class="track-list mt-lg">
@@ -118,11 +117,6 @@
 
   <footer class="footer">
     <div class="footer-container">
-      <div class="footer-links">
-        <a href="https://open.spotify.com/artist/dieseljohnnyraines" target="_blank">Spotify</a>
-        <a href="https://music.apple.com/artist/diesel-johnny-raines" target="_blank">Apple Music</a>
-        <a href="https://www.youtube.com/@dieseljohnnyraines" target="_blank">YouTube</a>
-      </div>
       <p class="footer-note">Diesel Johnny Raines is an AI art project. <a href="/about.html">Learn more</a></p>
       <p class="footer-copyright">&copy; 2025 Sandstream Records</p>
     </div>
