Update Album 2 Shattered with Spotify link and track list

--- a/djr/index.html
+++ b/djr/index.html
@@ -82,7 +82,7 @@
               <span class="album-card-era">The Loss Era</span>
               <h3>SHATTERED</h3>
               <p>Two years of hospital corridors. The breaking point.</p>
-              <a href="/music.html#shattered" class="btn btn-primary">Coming Soon</a>
+              <a href="https://open.spotify.com/album/2wKiMWhmngeWsktIFEIJmX" class="btn btn-primary" target="_blank">Listen</a>
             </div>
           </article>
 
