--- a/djr/music.html
+++ b/djr/music.html
@@ -76,17 +76,31 @@
         <!-- Album 2: Shattered -->
         <div class="album-detail" id="shattered">
           <div class="albums-grid" style="grid-template-columns: 300px 1fr; align-items: start;">
-            <div class="album-card-image" style="opacity: 0.7;">
+            <div class="album-card-image">
               <img src="/assets/images/album-2-shattered.png" alt="Shattered">
             </div>
             <div class="album-info">
               <span class="album-card-era" style="color: var(--color-album2);">The Loss Era</span>
               <h2>SHATTERED</h2>
-              <p class="text-muted">10 tracks | Coming 2025</p>
+              <p class="text-muted">12 tracks | 1:03:59 | 2026</p>
               <p>Beth gets sick. Two years of fighting. Emma is 7, Jake is 4. The mechanic who can fix anything &mdash; can't fix this.</p>
               <div class="mt-lg">
-                <span class="btn btn-secondary" style="opacity: 0.5; cursor: default;">Coming Soon</span>
+                <a href="https://open.spotify.com/album/2wKiMWhmngeWsktIFEIJmX" class="btn btn-primary" target="_blank">Listen on Spotify</a>
               </div>
+              <ol class="track-list mt-lg">
+                <li class="track-item"><span class="track-number">1</span><span class="track-title">Before The Storm</span><span class="track-duration">5:22</span></li>
+                <li class="track-item"><span class="track-number">2</span><span class="track-title">Shattered!</span><span class="track-duration">5:19</span></li>
+                <li class="track-item"><span class="track-number">3</span><span class="track-title">Can't Take Much More</span><span class="track-duration">5:25</span></li>
+                <li class="track-item"><span class="track-number">4</span><span class="track-title">Hospital Lights</span><span class="track-duration">4:53</span></li>
+                <li class="track-item"><span class="track-number">5</span><span class="track-title">I Still Feel You Here</span><span class="track-duration">5:39</span></li>
+                <li class="track-item"><span class="track-number">6</span><span class="track-title">Empty Chair</span><span class="track-duration">5:29</span></li>
+                <li class="track-item"><span class="track-number">7</span><span class="track-title">Anger And Ashes</span><span class="track-duration">4:21</span></li>
+                <li class="track-item"><span class="track-number">8</span><span class="track-title">Ghost In Every Room</span><span class="track-duration">6:09</span></li>
+                <li class="track-item"><span class="track-number">9</span><span class="track-title">Holding On To Smoke</span><span class="track-duration">7:02</span></li>
+                <li class="track-item"><span class="track-number">10</span><span class="track-title">Still Breathing</span><span class="track-duration">5:01</span></li>
+                <li class="track-item"><span class="track-number">11</span><span class="track-title">Hospital Lights (Acoustic)</span><span class="track-duration">4:23</span></li>
+                <li class="track-item"><span class="track-number">12</span><span class="track-title">Where Love Lives (Bonus)</span><span class="track-duration">4:56</span></li>
+              </ol>
             </div>
           </div>
         </div>
